--- a/cpu/stm32f769ni/CMakeLists.txt
+++ b/cpu/stm32f769ni/CMakeLists.txt
@@ -10,59 +10,72 @@ include(${MY_TOP_DIR}/cmake/gcc_stm32.cmake)
 
 
 ### CMSIS
+
 FIND_PACKAGE(CMSIS REQUIRED)
 
-add_library(CMSIS-${cpu} STATIC ${CMSIS_SOURCES})
-TARGET_INCLUDE_DIRECTORIES(CMSIS-${cpu} PRIVATE
+add_library(CMSIS_${cpu} OBJECT ${CMSIS_SOURCES})
+TARGET_INCLUDE_DIRECTORIES(CMSIS_${cpu} PUBLIC
     ${CMSIS_INCLUDE_DIRS}
 )
-STM32_SET_TARGET_PROPERTIES(CMSIS-${cpu})
+STM32_SET_TARGET_PROPERTIES(CMSIS_${cpu})
 
 
 ### STM32HAL, STM32LL
+
 FIND_PACKAGE(STM32HAL COMPONENTS adc dma eth flash fmc gpio i2c qspi rcc rtc sd sdram sdmmc smbus spi tim uart REQUIRED)
 FIND_PACKAGE(STM32LL COMPONENTS gpio i2c usart REQUIRED)
 
 SET(STM32HAL_SOURCES ${STM32HAL_SOURCES} ${STM32LL_SOURCES})
 
-add_library(STM32HAL-${cpu} STATIC ${STM32HAL_SOURCES})
-TARGET_INCLUDE_DIRECTORIES(STM32HAL-${cpu} PRIVATE
-    ${CMSIS_INCLUDE_DIRS}
+add_library(STM32HAL_${cpu} OBJECT ${STM32HAL_SOURCES})
+TARGET_INCLUDE_DIRECTORIES(STM32HAL_${cpu}
+    PUBLIC
     ${STM32HAL_INCLUDE_DIR}
 )
-target_compile_definitions(STM32HAL-${cpu} PUBLIC USE_FULL_LL_DRIVER)
-STM32_SET_TARGET_PROPERTIES(STM32HAL-${cpu})
+target_compile_definitions(STM32HAL_${cpu} PUBLIC USE_FULL_LL_DRIVER)
+target_link_libraries(STM32HAL_${cpu} CMSIS_${cpu})
+STM32_SET_TARGET_PROPERTIES(STM32HAL_${cpu})
 
 
 ### FreeRTOS
 
 FIND_PACKAGE(FreeRTOS REQUIRED)
 
-add_library(FreeRTOS-${cpu} STATIC ${FreeRTOS_SOURCES})
-message("CMSIS_COMMON_INCLUDE_DIR=${CMSIS_COMMON_INCLUDE_DIR}")
+add_library(FreeRTOS_${cpu} OBJECT ${FreeRTOS_SOURCES})
 
-target_include_directories(FreeRTOS-${cpu} PUBLIC
+target_include_directories(FreeRTOS_${cpu} PUBLIC
     ${FreeRTOS_INCLUDE_DIRS}
 )
 
-target_include_directories(FreeRTOS-${cpu} PRIVATE
-    ${CMSIS_COMMON_INCLUDE_DIR}
-)
+target_link_libraries(FreeRTOS_${cpu} CMSIS_${cpu})
+STM32_SET_TARGET_PROPERTIES(FreeRTOS_${cpu})
 
 
 ### lwIP
 
 FIND_PACKAGE(lwip REQUIRED)
-add_compile_definitions(LWIP_DEBUG)
-add_library(lwip-${cpu} STATIC ${LWIP_SOURCES})
-STM32_SET_TARGET_PROPERTIES(lwip-${cpu})
-message("LWIP_INCLUDE_DIRS=${LWIP_INCLUDE_DIRS}")
-target_include_directories(lwip-${cpu} PUBLIC
+add_library(lwip_${cpu} OBJECT ${lwip_SOURCES})
+target_compile_definitions(lwip_${cpu} PRIVATE LWIP_DEBUG)
+target_include_directories(lwip_${cpu}
+    PUBLIC
     ${LWIP_INCLUDE_DIRS}
-)
-target_include_directories(lwip-${cpu} PRIVATE
-    ${FreeRTOS_INCLUDE_DIRS}
+    PRIVATE
     ${MY_SRC_DIR}/config
     ${MY_SRC_DIR}/system
     ${MY_SRC_DIR}/common
 )
+
+target_link_libraries(lwip_${cpu} FreeRTOS_${cpu})
+
+
+#### init cpu
+#
+#set(INIT_SOURCES init_sysclk.c)
+#set(INIT_HEADERS init_sysclk.h)
+#add_library(sysclk_${cpu} OBJECT ${INIT_SOURCES} ${INIT_HEADERS})
+#target_link_libraries(sysclk_${cpu} STM32HAL_${cpu})
+#target_include_directories(sysclk_${cpu}
+#    PUBLIC
+#    ./
+#)
+#STM32_SET_TARGET_PROPERTIES(sysclk_${cpu})
