set HSE_VALUE for CMSIS and STM32HAL

--- a/cpu/stm32f303cc/CMakeLists.txt
+++ b/cpu/stm32f303cc/CMakeLists.txt
@@ -5,7 +5,8 @@ CMAKE_MINIMUM_REQUIRED(VERSION 3.12)
 set(cpu 303cc)
 
 SET(STM32_CHIP STM32F303CC)
-set(HEAP_SIZE 10240) # 1/4 of A000 (40k) total
+set(HEAP_SIZE 20480) # 1/2 of A000 (40k) total
+set(HSE_VALUE 24000000)
 
 include(${MY_TOP_DIR}/cmake/gcc_stm32.cmake)
 
@@ -19,6 +20,7 @@ TARGET_INCLUDE_DIRECTORIES(CMSIS_${cpu} PUBLIC
     ${CMSIS_INCLUDE_DIRS}
 )
 STM32_SET_TARGET_PROPERTIES(CMSIS_${cpu})
+STM32_SET_HSE_VALUE(CMSIS_${cpu} ${HSE_VALUE})
 
 
 ### STM32HAL, STM32LL
@@ -36,6 +38,7 @@ TARGET_INCLUDE_DIRECTORIES(STM32HAL_${cpu}
 target_compile_definitions(STM32HAL_${cpu} PUBLIC USE_FULL_LL_DRIVER)
 target_link_libraries(STM32HAL_${cpu} CMSIS_${cpu})
 STM32_SET_TARGET_PROPERTIES(STM32HAL_${cpu})
+STM32_SET_HSE_VALUE(STM32HAL_${cpu} ${HSE_VALUE})
 
 
 ### FreeRTOS
