--- a/cpu/stm32f769ni/CMakeLists.txt
+++ b/cpu/stm32f769ni/CMakeLists.txt
@@ -6,6 +6,8 @@ set(cpu 769ni)
 
 SET(STM32_CHIP STM32F769NIH)
 set(HEAP_SIZE 0x20000) # 1/4 of 0x80000 (512k) total
+set(HSE_VALUE 25000000)
+
 include(${MY_TOP_DIR}/cmake/gcc_stm32.cmake)
 
 
@@ -18,6 +20,7 @@ TARGET_INCLUDE_DIRECTORIES(CMSIS_${cpu} PUBLIC
     ${CMSIS_INCLUDE_DIRS}
 )
 STM32_SET_TARGET_PROPERTIES(CMSIS_${cpu})
+STM32_SET_HSE_VALUE(CMSIS_${cpu} ${HSE_VALUE})
 
 
 ### STM32HAL, STM32LL
@@ -35,6 +38,7 @@ TARGET_INCLUDE_DIRECTORIES(STM32HAL_${cpu}
 target_compile_definitions(STM32HAL_${cpu} PUBLIC USE_FULL_LL_DRIVER)
 target_link_libraries(STM32HAL_${cpu} CMSIS_${cpu})
 STM32_SET_TARGET_PROPERTIES(STM32HAL_${cpu})
+STM32_SET_HSE_VALUE(STM32HAL_${cpu} ${HSE_VALUE})
 
 
 ### FreeRTOS
