--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ set(CMAKE_BUILD_TYPE Debug)
 if(DEFINED ENV{TOOLCHAIN_PREFIX})
     set(TOOLCHAIN_PREFIX=ENV{TOOLCHAIN_PREFIX})
 endif()
+set(CMAKE_TRY_COMPILE_TARGET_TYPE STATIC_LIBRARY)
 
 SET(MY_TOP_DIR ${CMAKE_SOURCE_DIR})
 SET(MY_EXT_DIR ${MY_TOP_DIR}/external)
@@ -30,6 +31,7 @@ SET(STM32_MIN_STACK_SIZE 0x400) # Minimum stack size for error detection at link
 
 PROJECT(bmc_rtos LANGUAGES C CXX)
 ENABLE_LANGUAGE(ASM)
+set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 11)
 
 # Stack Smashing Protection
